--- a/registration.html
+++ b/registration.html
@@ -297,7 +297,28 @@
         </div>
         <div class="col col-md-3 border1">
             <h5>BARANGAY</h5>
-            <input class="form-control" type="text" name="" id="">
+            <select class="form-select" id="id-type" name="id-type">
+                <option disabled selected value="">Please Select</option>
+                <option value="Aplaya">Aplaya</option>
+                <option value="Balibago">Balibago</option>
+                <option value="Caingin">Caingin</option>
+                <option value="Dila">Dila</option>
+                <option value="Dita">Dita</option>
+                <option value="Don Jose">Don Jose</option>
+                <option value="Ibaba">Ibaba</option>
+                <option value="Kalnuran">Kanluran</option>
+                <option value="Labas">Labas</option>
+                <option value="Macabling">Macabling</option>
+                <option value="Malitlit">Malitlit</option>
+                <option value="Malusak">Malusak</option>
+                <option value="Market Area">Market Area</option>
+                <option value="Pook">Pook</option>
+                <option value="Pulong Santa Cruz">Pulong Santa Cruz</option>
+                <option value="Santo Domingo">Santo Domingo</option>
+                <option value="Sinalhan">Sinalhan</option>
+                <option value="Tagapo">Tagapo</option>
+            </select>
+            <!-- <input class="form-control" type="text" name="" id=""> -->
         </div>
     </div>
     <!-- row 5 -->
