--- a/soloparent-registration.html
+++ b/soloparent-registration.html
@@ -96,9 +96,9 @@
                 </label>
             </div>
             <div class="col ml-5">
-                <input class="form-check-input" type="radio" value="Annuled" name="marital-status" id="annuled">
-                <label class="form-check-label" for="annuled">
-                Annuled
+                <input class="form-check-input" type="radio" value="Annulled" name="marital-status" id="annulled">
+                <label class="form-check-label" for="annulled">
+                Annulled
                 </label>
             </div>
             <div class="col ml-5">
