--- a/sr-citizen-registration.html
+++ b/sr-citizen-registration.html
@@ -142,7 +142,7 @@
             <!-- Asawa -->
             <div class="row align-items-start">
                 <div class="col form-group">
-                    <label class="" for="asawa">Pangalang ng Asawa</label>
+                    <label class="" for="asawa">Pangalan ng Asawa</label>
                     <input class="form-control" type="text" id="asawa" name="asawa">
                 </div>
                 <div class="col form-group">
