--- a/sr-citizen-birthday-cash-incentive.html
+++ b/sr-citizen-birthday-cash-incentive.html
@@ -44,7 +44,27 @@
         </div>
         <div class="col-4 mb-5 form-group">
             <label class="" for="barangay2">Barangay</label>
-            <input class="form-control" type="text" id="barangay2" name="barangay2">
+            <select class="form-select" id="id-type" name="id-type">
+                <option disabled selected value="">Please Select</option>
+                <option value="Aplaya">Aplaya</option>
+                <option value="Balibago">Balibago</option>
+                <option value="Caingin">Caingin</option>
+                <option value="Dila">Dila</option>
+                <option value="Dita">Dita</option>
+                <option value="Don Jose">Don Jose</option>
+                <option value="Ibaba">Ibaba</option>
+                <option value="Kalnuran">Kanluran</option>
+                <option value="Labas">Labas</option>
+                <option value="Macabling">Macabling</option>
+                <option value="Malitlit">Malitlit</option>
+                <option value="Malusak">Malusak</option>
+                <option value="Market Area">Market Area</option>
+                <option value="Pook">Pook</option>
+                <option value="Pulong Santa Cruz">Pulong Santa Cruz</option>
+                <option value="Santo Domingo">Santo Domingo</option>
+                <option value="Sinalhan">Sinalhan</option>
+                <option value="Tagapo">Tagapo</option>
+            </select>
         </div>
     </div>
 
