--- a/registration.html
+++ b/registration.html
@@ -139,37 +139,37 @@
                 <div class="col">
                     <h5>TYPE OF DISABILITY</h5>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="Deaf/Hard of Hearing" id="deaf" name="deaf">
+                        <input class="form-check-input" type="checkbox" value="Deaf/Hard of Hearing" id="deaf" name="typeOfDisability[]">
                         <label class="form-check-label" for="deaf">
                             Deaf/Hard of Hearing
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="Intellectual Disability" id="intellectualDisability" name="intellectualDisability">
+                        <input class="form-check-input" type="checkbox" value="Intellectual Disability" id="intellectualDisability" name="typeOfDisability[]">
                         <label class="form-check-label" for="intellectualDisability">
                             Intellectual Disability
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="Learning Disability" id="learningDisability" name="learningDisability">
+                        <input class="form-check-input" type="checkbox" value="Learning Disability" id="learningDisability" name="typeOfDisability[]">
                         <label class="form-check-label" for="learningDisability">
                             Learning Disability
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="Mental Disability" id="mentalDisability" name="mentalDisability">
+                        <input class="form-check-input" type="checkbox" value="Mental Disability" id="mentalDisability" name="typeOfDisability[]">
                         <label class="form-check-label" for="mentalDisability">
                             Mental Disability
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="Physical Disablity (Orthopedic)" id="physicalDisablity" name="physicalDisablity">
+                        <input class="form-check-input" type="checkbox" value="Physical Disablity (Orthopedic)" id="physicalDisablity" name="typeOfDisability[]">
                         <label class="form-check-label" for="physicalDisablity">
                             Physical Disablity (Orthopedic)
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="Psychosocial Disability" id="psychosocialDisability" name="psychosocialDisability">
+                        <input class="form-check-input" type="checkbox" value="Psychosocial Disability" id="psychosocialDisability" name="typeOfDisability[]">
                         <label class="form-check-label" for="psychosocialDisability">
                             Psychosocial Disability
                         </label>
@@ -177,25 +177,25 @@
                 </div>
                 <div class="col">
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="Speech and Language Impairment" id="speechAndLanguageImpairment" name="speechAndLanguageImpairment">
+                        <input class="form-check-input" type="checkbox" value="Speech and Language Impairment" id="speechAndLanguageImpairment" name="typeOfDisability[]">
                         <label class="form-check-label" for="speechAndLanguageImpairment">
                             Speech and Language Impairment
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="Visual Disability" id="visualDisability" name="visualDisability">
+                        <input class="form-check-input" type="checkbox" value="Visual Disability" id="visualDisability" name="typeOfDisability[]">
                         <label class="form-check-label" for="visualDisability">
                             Visual Disability
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="Cancer (RA11215)" id="cancer" name="cancer">
+                        <input class="form-check-input" type="checkbox" value="Cancer (RA11215)" id="cancer" name="typeOfDisability[]">
                         <label class="form-check-label" for="cancer">
                             Cancer (RA11215)
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="Rare Disease (RA10747)" id="rareDisease" name="rareDisease">
+                        <input class="form-check-input" type="checkbox" value="Rare Disease (RA10747)" id="rareDisease" name="typeOfDisability[]">
                         <label class="form-check-label" for="rareDisease">
                             Rare Disease (RA10747)
                         </label>
@@ -213,30 +213,30 @@
                 <div class="col">
                     <h5>CAUSE OF DISABILITY</h5>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="Congenital/Inborn" id="inborn" name="inborn">
+                        <input class="form-check-input" type="checkbox" value="Congenital/Inborn" id="inborn" name="causeOfDisability[]">
                         <label class="form-check-label" for="inborn">
                             <b>CONGENITAL/INBORN</b>
                         </label>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="Autism" id="autism" name="autism">
+                            <input class="form-check-input" type="checkbox" value="Autism" id="autism" name="congenital[]">
                             <label class="form-check-label" for="autism">
                                 Autism
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="ADHD" id="adhd" name="adhd">
+                            <input class="form-check-input" type="checkbox" value="ADHD" id="adhd" name="congenital[]">
                             <label class="form-check-label" for="adhd">
                                 ADHD
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="Cerebral Palsy" id="cerebralPalsy" name="cerebralPalsy">
+                            <input class="form-check-input" type="checkbox" value="Cerebral Palsy" id="cerebralPalsy" name="congenital[]">
                             <label class="form-check-label" for="cerebralPalsy">
                                 Cerebral Palsy
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="Down Syndrome" id="downSyndrome" name="downSyndrome">
+                            <input class="form-check-input" type="checkbox" value="Down Syndrome" id="downSyndrome" name="congenital[]">
                             <label class="form-check-label" for="downSyndrome">
                                 Down Syndrome
                             </label>
@@ -260,24 +260,24 @@
                 </div>
                 <div class="col">
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="Acquired" id="acquired" name="acquired">
+                        <input class="form-check-input" type="checkbox" value="Acquired" id="acquired" name="causeOfDisability[]">
                         <label class="form-check-label" for="acquired">
                             <b>ACQUIRED</b>
                         </label>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="Chronic Illness" id="chronicIllness" name="chronicIllness">
+                            <input class="form-check-input" type="checkbox" value="Chronic Illness" id="chronicIllness" name="acquired[]">
                             <label class="form-check-label" for="chronicIllness">
                                 Chronic Illness
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="Cerebral Palsy" id="acquiredCerebralPalsy" name="acquiredCerebralPalsy">
+                            <input class="form-check-input" type="checkbox" value="Cerebral Palsy" id="acquiredCerebralPalsy" name="acquired[]">
                             <label class="form-check-label" for="acquiredCerebralPalsy">
                                 Cerebral Palsy
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="Injury" id="injury" name="injury">
+                            <input class="form-check-input" type="checkbox" value="Injury" id="injury" name="acquired[]">
                             <label class="form-check-label" for="injury">
                                 Injury
                             </label>
