--- a/registration.html
+++ b/registration.html
@@ -1163,7 +1163,7 @@
             </div>
             <div class="col-2 form-group">
                 <label class="" for="sex2">Sex </label>
-                <select class="form-select" id="id-type" name="id-type">
+                <select class="form-select" id="sex2" name="sex2">
                     <option disabled selected value="">Please Select</option>
                     <option value="Male">Male</option>
                     <option value="Female">Female</option>
@@ -1185,12 +1185,12 @@
 
         <div class="row align-items-start">
             <div class="col">
-                <label for="address2">Address</label>
-                <input class="form-control" type="text" id="address2" name="address2" required>
+                <label for="address">Address</label>
+                <input class="form-control" type="text" id="address" name="address" required>
             </div>
             <div class="col">
                 <label for="address2">Barangay</label>
-                <select class="form-select" id="id-type" name="id-type">
+                <select class="form-select" id="barangay2" name="barangay2">
                     <option disabled selected value="">Please Select</option>
                     <option value="Aplaya">Aplaya</option>
                     <option value="Balibago">Balibago</option>
