--- a/registration.html
+++ b/registration.html
@@ -1154,16 +1154,16 @@
         </div>
         <div class="row align-items-start">
             <div class="col form-group">
-                <label class="" for="name2">Name</label>
-                <input class="form-control" type="text" id="name2" name="name2" required>
+                <label class="" for="name">Name</label>
+                <input class="form-control" type="text" id="name2" name="name" required>
             </div>
             <div class="col-2 form-group">
-                <label class="" for="age2">Age</label>
-                <input class="form-control" type="text" id="age2" name="age2" disabled>
+                <label class="" for="age">Age</label>
+                <input class="form-control" type="text" id="age" name="age" disabled>
             </div>
             <div class="col-2 form-group">
-                <label class="" for="sex2">Sex </label>
-                <select class="form-select" id="sex2" name="sex2">
+                <label class="" for="sex">Sex </label>
+                <select class="form-select" id="sex" name="sex">
                     <option disabled selected value="">Please Select</option>
                     <option value="Male">Male</option>
                     <option value="Female">Female</option>
@@ -1174,12 +1174,12 @@
 
         <div class="row align-items-start">
             <div class="col form-group">
-                <label class="" for="birth2">Date of Birth </label>
-                <input class="form-control" type="date" id="birth2" name="birth2" required>
+                <label class="" for="birth">Date of Birth </label>
+                <input class="form-control" type="date" id="birth" name="birth" required>
             </div>
             <div class="col form-group">
-                <label class="" for="birthplace2">Place of Birth </label>
-                <input class="form-control" type="text" id="birthplace2" name="birthplace2" required>
+                <label class="" for="birthplace">Place of Birth </label>
+                <input class="form-control" type="text" id="birthplace" name="birthplace" required>
             </div>
         </div>
 
@@ -1189,8 +1189,8 @@
                 <input class="form-control" type="text" id="address" name="address" required>
             </div>
             <div class="col">
-                <label for="address2">Barangay</label>
-                <select class="form-select" id="barangay2" name="barangay2">
+                <label for="address">Barangay</label>
+                <select class="form-select" id="barangay" name="barangay">
                     <option disabled selected value="">Please Select</option>
                     <option value="Aplaya">Aplaya</option>
                     <option value="Balibago">Balibago</option>
@@ -1216,44 +1216,44 @@
 
         <div class="row align-items-start">
             <div class="col">
-                <label for="educational2">Highest Educational Attainment</label>
-                <input class="form-control" type="text" id="educational2" name="educational2" required>
+                <label for="educational">Highest Educational Attainment</label>
+                <input class="form-control" type="text" id="educational" name="educational" required>
             </div>
         </div>
 
         <div class="row align-items-start">
             <div class="col">
-                <label for="occupation2">Occupation</label>
-                <input class="form-control" type="text" id="occupation2" name="occupation2" required>
+                <label for="occupation">Occupation</label>
+                <input class="form-control" type="text" id="occupation" name="occupation" required>
             </div>
             <div class="col">
-                <label for="income2">Monthly Income</label>
-                <input class="form-control" type="text" id="income2" name="income2" required>
-            </div>
-        </div>
-
-        <div class="row align-items-start">
-            <div class="col">
-                <label for="famincome2">Total Monthly Family Income</label>
-                <input class="form-control" type="text" id="famincome2" name="famincome2" required>
+                <label for="income">Monthly Income</label>
+                <input class="form-control" type="text" id="income" name="income" required>
             </div>
         </div>
 
         <div class="row align-items-start">
             <div class="col">
-                <label for="tenurial2">Tenurial Status</label>
-                <input class="form-control" type="text" id="tenurial2" name="tenurial2" required>
+                <label for="famincome">Total Monthly Family Income</label>
+                <input class="form-control" type="text" id="famincome" name="famincome" required>
             </div>
         </div>
 
         <div class="row align-items-start">
             <div class="col">
-                <label for="religion2">Religion</label>
-                <input class="form-control" type="text" id="religion2" name="religion2" required>
+                <label for="tenurial">Tenurial Status</label>
+                <input class="form-control" type="text" id="tenurial" name="tenurial" required>
+            </div>
+        </div>
+
+        <div class="row align-items-start">
+            <div class="col">
+                <label for="religion">Religion</label>
+                <input class="form-control" type="text" id="religion" name="religion" required>
             </div>
             <div class="col">
                 <label for="contact2">Contact no.</label>
-                <input class="form-control" type="text" id="contact2" name="contact2" required>
+                <input class="form-control" type="text" id="contact" name="contact" required>
             </div>
         </div>
         <div class="row m-1">
@@ -1405,25 +1405,25 @@
         <div class="row align-items-start">
             <div class="col form-group">
                 <div>
-                    <input class="form-check-input" type="radio" name="radioNoLabel" id="radioNoLabel1" value="">
+                    <input class="form-check-input" type="radio" name="purpose" id="bago" value="Bago">
                     <label class="" for="bago">Bago</label>
                 </div>    
             </div>
             <div class="col form-group">
                 <div>
-                    <input class="form-check-input" type="radio" name="radioNoLabel" id="radioNoLabel1" value="">
+                    <input class="form-check-input" type="radio" name="purpose" id="lumipat" value="Lumipat">
                     <label class="" for="lumipat">Lumipat</label>
                 </div>    
             </div>
             <div class="col form-group">
                 <div>
-                    <input class="form-check-input" type="radio" name="radioNoLabel" id="radioNoLabel1" value="">
+                    <input class="form-check-input" type="radio" name="purpose" id="magpapalit" value="Magpapalit">
                     <label class="" for="magpapalit">Magpapalit</label>
                 </div>    
             </div>
             <div class="col form-group">
                 <div>
-                    <input class="form-check-input" type="radio" name="radioNoLabel" id="radioNoLabel1" value="">
+                    <input class="form-check-input" type="radio" name="purpose" id="nawala" value="Nawala">
                     <label class="" for="nawala">Nawala</label>
                 </div>    
             </div>
@@ -1458,7 +1458,7 @@
             <div class="row align-items-start">
                 <div class="col form-group">
                     <label class="" for="barangay">Barangay</label>
-                    <select class="form-select" id="id-type" name="id-type">
+                    <select class="form-select" id="barangay" name="barangay">
                         <option disabled selected value="">Please Select</option>
                         <option value="Aplaya">Aplaya</option>
                         <option value="Balibago">Balibago</option>
@@ -1536,7 +1536,7 @@
                 </div>
                 <div class="col form-group">
                     <label class="" for="hanapbuhay">Hanabuhay</label>
-                    <input class="form-control" type="text" id="hanapbuhay" name="hanapbuhay    " required>
+                    <input class="form-control" type="text" id="hanapbuhay" name="hanapbuhay" required>
                 </div>
             </div>
             <!-- Pensyon -->
@@ -1582,6 +1582,7 @@
                 </div>
             </div>
             <!-- DITO MO ILAGAY YUNG LALAGAY MO ZETH -->
+            <!-- AYOKO NGA -ZETH-->
             <input class="mt-4 btn btn-lr btn-primary w-100" type="submit" value="Register" id="senior-citizen-register" name="senior-citizen-register">
     </form>
 </div>
